# playbook-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: deploy-existing-openkb.md  precision-recall.md
openspec/changes/add-web-publish/: proposal.md  spike.md
openspec/changes/archive/2026-06-17-add-web-publish/: design.md  (+1 more)
openspec/changes/improve-web-ux/: design.md  proposal.md  tasks.md
openspec/changes/playmaker/: design.md  probe-cheaper-query-model-results.md  probe-cheaper-query-model.md  proposal.md  tasks.md
openspec/specs/web-gating-deploy/: spec.md
openspec/specs/web-publish/: spec.md
openspec/specs/web-query/: spec.md
patches/: 01-bound-llm-connections.md  02-compile-concurrency.md  03-propagate-extra-headers.md  04-strip-cache-control-vertex.md  README.md  patch-01-bound-llm-connections.diff  patch-02-compile-concurrency.diff  patch-03-propagate-extra-headers.diff  patch-04-strip-cache-control-vertex.diff
playmaker/: __init__.py  __main__.py  agents_md.py  changelog.py  cli.py  engine.py  paths.py  sidecar.py  wiki.py
playmaker/publish/: __init__.py  builder.py
playmaker/publish/api/: query.py
playmaker/publish/deploy/: DEPLOY.md  login.html  middleware.js  requirements.txt  vercel.json
playmaker/publish/static/: ask.js  command-bar.js  search.js  style.css  vault-app.js
playmaker/publish/templates/: base.html  index.html  play.html
playmaker/templates/: config.yaml  env.example
scripts/: install.sh  smoke_test.py
tests/: conftest.py  test_changelog.py  test_cli.py  test_flow.py  test_publish.py  test_query.py  test_sidecar.py  test_wiki.py
(+10 files in other folders)
